# pheno_mycn

./: .gitattributes  .gitignore  .gitignore.release  CITATION.cff  NOTICE  PUBLICATION.md  README.md  environment.yml  pyproject.toml  requirements.txt
data/: README.md
data/example/: README.md
data/example/cv_splits/: fold0.csv
experiments/: README.md  requirements-experiments.txt
experiments/_common/: paths.py
experiments/cell_level_stats/: allcluster_lme_modality_summary.py  lme_dotplot.py  mixed_effects_stats.py  slide_level_stats.py
experiments/cohort_demographics/: cohort_demographics.py
experiments/gmm_responsibility/: compute_responsibilities.py  ks_all_clusters.py  quantify_c3_c5_distributions.py
experiments/gmm_statistics/: plot_panel_a.py  plot_panels_bcdefg.py
experiments/latent_space/: allcluster_softlabel_summary.py  cell_latent_analysis.py  softlabel_loso_cv.py  umap_tile_montage.py  umap_tile_montage_c3_square_trial.py  umap_tile_montage_tier2.py
experiments/shap_analysis/: run_shap.py
experiments/survival_analysis/: 00_build_cohort.py  01_km_mycn.py  02_slide_embedding_survival.py  03_cell_feature_survival.py  04_km_gmm_components.py  05_screen_summary.py  06_km_combined_components.py  07_progression_summary.py  08_oof_mycn_predictions.py  09_predicted_mycn_and_cox.py
pheno_mycn/: cli.py  inference.py
pheno_mycn/datasets/: camel_data.py  data_interface.py
pheno_mycn/models/: CLAM_SB.py  MILNet.py  MILNet_multi.py  TransMIL.py  ad_loss.py  model_interface.py  utils.py
pheno_mycn/utils/: utils.py
plug_and_play/: README.md  predict.py
scripts/: train.py
visualization/: README.md  cell_level_maps.py  create_map.py  heatmap_config_camelyon.yaml  prototype_analysis.py  prototype_map.py  requirements-visualization.txt
visualization/clam_datasets/: dataset_generic.py  wsi_dataset.py
visualization/clam_utils/: dataset.py  load_files.py  lr_scheduler.py
visualization/wsi_core/: WholeSlideImage.py  batch_process_utils.py  util_classes.py  wsi_utils.py
