[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pheno-mycn"
version = "1.0.0"
description = "Interpretable histological phenotype discovery associated with MYCN amplification in paediatric neuroblastoma."
readme = "README.md"
requires-python = ">=3.8"
license = { text = "GPL-3.0-only" }
authors = [
    { name = "Dr Olga Fourkioti" },
    { name = "Dr Binghao Chai" },
]
keywords = [
    "neuroblastoma", "MYCN", "digital pathology",
    "multiple-instance learning", "interpretable machine learning",
    "Gaussian mixture models",
]

# Minimal dependencies for the model + Lightning-free inference. For the full
# training pipeline and the experiments see requirements.txt / environment.yml.
# `addict` is required only to unpickle config objects stored inside the bundled
# PyTorch-Lightning checkpoint; it is tiny and pure-Python.
dependencies = [
    "torch>=1.12",
    "numpy>=1.21",
    "pyyaml>=5.4",
    "addict>=2.4",
]

[project.optional-dependencies]
# Training pipeline (PyTorch Lightning 1.x). Note: setuptools<81 is required
# because Lightning 1.x imports pkg_resources, which setuptools 81 removed.
train = [
    "pytorch-lightning>=1.6,<2.0",
    "torchmetrics>=0.11,<1.0",
    "setuptools<81",
    "addict>=2.4",
    "numpy<2",
    "pandas>=1.3",
    "scikit-learn>=1.0",
    "scipy>=1.7",
    "nystrom-attention>=0.0.9",
]
# Whole-slide visualization scripts. openslide-python also needs the libopenslide
# C library — install it via conda-forge (see environment.yml) or your OS package
# manager (e.g. `apt install openslide-tools`); the pip wheel alone is not enough.
viz = [
    "matplotlib>=3.5",
    "seaborn>=0.12",
    "umap-learn>=0.5",
    "h5py>=3.6",
    "opencv-python-headless>=4.5",
    "openslide-python>=1.1",
    "Pillow>=9.0",
    "scipy>=1.7",
]
# Additional experiments (survival, SHAP, latent space, cell-level stats).
experiments = [
    "numpy<2",
    "pandas>=1.3",
    "scikit-learn>=1.0",
    "scipy>=1.7",
    "matplotlib>=3.5",
    "seaborn>=0.12",
    "umap-learn>=0.5",
    "lifelines>=0.27",
    "statsmodels>=0.13",
    "shap>=0.41",
]

[project.scripts]
pheno-mycn = "pheno_mycn.cli:main"

[project.urls]
"Olga Fourkioti (GitHub)" = "https://github.com/olgarithmics"
"Binghao Chai" = "https://bhchai.com/"
"Binghao Chai (GitHub)" = "https://github.com/cbhindex"

[tool.setuptools]
packages = [
    "pheno_mycn",
    "pheno_mycn.models",
    "pheno_mycn.datasets",
    "pheno_mycn.optimizers",
    "pheno_mycn.losses",
    "pheno_mycn.utils",
]

[tool.setuptools.package-data]
"pheno_mycn" = ["configs/*.yaml"]
